@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-06-XX  Release 7.14.10                                    ---
 ----------------------------------------------------------------------
 
+* add dynamic sampling for NURBS wireframe drawing - Cliff Yapp
 * changed mged 'help' output formatting - Sean Morrison
 * improved 'e_id' mged command help - Sean Morrison
 * archer interactive editing support for most primitives - Bob Parker
